test(robot): add Test Replicas Not Accumulate During Engine Upgrade test case (#3160)
Signed-off-by: Yang Chiu <yang.chiu@suse.com>
Signed-off-by: yangchiu <yang.chiu@suse.com>

--- a/e2e/templates/system_upgrade_controller/k8s_upgrade_plan.yaml
+++ b/e2e/templates/system_upgrade_controller/k8s_upgrade_plan.yaml
@@ -9,9 +9,7 @@ spec:
   nodeSelector:
     matchExpressions:
     - key: node-role.kubernetes.io/control-plane
-      operator: In
-      values:
-      - "true"
+      operator: Exists
   serviceAccountName: system-upgrade
   tolerations:
   - key: "node-role.kubernetes.io/control-plane"
