--- a/manager/integration/deploy/backupstores/cifs-backupstore.yaml
+++ b/manager/integration/deploy/backupstores/cifs-backupstore.yaml
@@ -41,17 +41,8 @@ spec:
             nodeSelectorTerms:
             - matchExpressions:
               - key: node-role.kubernetes.io/control-plane
-                operator: In
-                values:
-                - "true"
-                - ""
+                operator: Exists
       tolerations:
-      - key: "node-role.kubernetes.io/master"
-        operator: "Exists"
-        effect: "NoSchedule"
-      - key: "node-role.kubernetes.io/master"
-        operator: "Exists"
-        effect: "NoExecute"
       - key: "node-role.kubernetes.io/control-plane"
         operator: "Exists"
         effect: "NoSchedule"
